tests/parser/tests/cases/should_fail/dangling_paren_tree/case.hash
// This for some reason doesn't trip the unclosed parenthesis logic
func_call();
k(
