tests/parser/tests/cases/should_fail/dangling_paren_tree/case.stderr
error: encountered unclosed delimiter `(`, add a `)` after the inner expression
 --> $DIR/case.hash:3:2
2 |   func_call();
3 |   k(
  |    ^ here
